# here-data-sdk-cpp

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .ort.yml  .travis.yml  AggregatedDataResult_8h_source.html  AlignedBox_8h_source.html  ApiError_8h_source.html  ApiLookupClient_8h_source.html  ApiNoResult_8h_source.html  ApiResponse_8h_source.html  Api_8h_source.html  Appender_8h_source.html  AppleSignInProperties_8h_source.html  Atomic_8h_source.html  AuthenticationApi_8h_source.html  AuthenticationClient_8h_source.html  AuthenticationCredentials_8h_source.html  AuthenticationError_8h_source.html  AuthenticationSettings_8h_source.html  AuthorizeRequest_8h_source.html  AuthorizeResult_8h_source.html  AutoRefreshingToken_8h_source.html  BackdownStrategy_8h_source.html  Base64_8h_source.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CacheSettings_8h_source.html  CancellationContext_8h_source.html  CancellationContext_8inl_source.html  CancellationToken_8h_source.html  CatalogClient_8h_source.html  CatalogRequest_8h_source.html  CatalogVersionRequest_8h_source.html  CatalogVersion_8h_source.html  Catalog_8h_source.html  CertificateSettings_8h_source.html  CheckDataExistsRequest_8h_source.html  (+2146 more)
docs/: CMakeLists.txt  GettingStartedGuide.md  OverallArchitecture.md  authenticate.md  create-platform-client-settings.md  dataservice-cache-example.md  dataservice-read-catalog-example.md  dataservice-read-from-stream-layer-example.md  dataservice-write-example.md  get-started.md  work-with-data-apis.md
docs/diagrams/: sdk-module-overview.puml
examples/: .gitignore  CMakeLists.txt  Examples.h  Options.h  ProtectedCacheExample.cpp  ProtectedCacheExample.h  ReadExample.cpp  ReadExample.h  StreamLayerReadExample.cpp  StreamLayerReadExample.h  WriteExample.cpp  WriteExample.h  main.cpp
examples/cmake/: gen_android_example.cmake.in  gen_ios_example.cmake.in
examples/dataservice-read/: CMakeLists.txt  example.cpp  example.h  main.cpp
examples/dataservice-write/: CMakeLists.txt  example.cpp  example.h  main.cpp
examples/ios/: AppDelegate.h  CMakeLists.txt.in  ViewController.h  ViewController.mm
olp-cpp-sdk-authentication/: CMakeLists.txt
olp-cpp-sdk-authentication/src/: AuthenticationClient.cpp  AuthenticationClientImpl.cpp  AuthenticationClientImpl.h  AuthenticationClientUtils.cpp  AuthenticationClientUtils.h  AuthenticationCredentials.cpp  AuthorizeRequest.cpp  AutoRefreshingToken.cpp  AutoRefreshingToken.h  BaseResult.cpp  BaseResult.h  Common.h  Constants.cpp  Constants.h  Crypto.cpp  Crypto.h  DecisionClient.cpp  DecisionClientImpl.cpp  DecisionClientImpl.h  ResponseFromJsonBuilder.h  Rfc1123Helper.cpp  Rfc1123Helper.h  Settings.cpp  SignInResult.cpp  SignInResultImpl.cpp  SignInResultImpl.h  SignInUserResult.cpp  SignInUserResultImpl.cpp  SignInUserResultImpl.h  SignOutResult.cpp  SignOutResultImpl.cpp  SignOutResultImpl.h  SignUpResult.cpp  SignUpResultImpl.cpp  SignUpResultImpl.h  TokenEndpoint.cpp  TokenEndpoint.h  TokenEndpointImpl.cpp  TokenEndpointImpl.h  TokenProvider.cpp  (+3 more)
olp-cpp-sdk-authentication/test/: CMakeLists.txt
olp-cpp-sdk-authentication/tests/: ArcGisAuthenticationOnlineTest.cpp  ArcGisAuthenticationOnlineTest.h  ArcGisTestUtils.cpp  ArcGisTestUtils.h  AuthenticationBaseTest.h  AuthenticationClientTest.cpp  AuthenticationCredentialsTest.cpp  AuthenticationOfflineTest.cpp  AuthenticationOfflineTest.h  AuthenticationOnlineTest.cpp  AuthenticationOnlineTest.h  AuthenticationProductionTest.cpp  AuthenticationTest.cpp  AuthenticationTest.h  AuthenticationTests.cpp  AuthenticationUtils.cpp  CMakeLists.txt  CommonTestUtils.h  CryptoTest.cpp  DecisionApiClientTest.cpp  FacebookAuthenticationOnlineTest.cpp  FacebookAuthenticationOnlineTest.h  FacebookTestUtils.cpp  FacebookTestUtils.h  GoogleAuthenticationOnlineTest.cpp  GoogleAuthenticationOnlineTest.h  GoogleTestUtils.cpp  GoogleTestUtils.h  HereAccountOauth2IntegrationOfflineTest.cpp  HereAccountOauth2IntegrationOnlineTest.cpp  Rfc1123HelperTest.cpp  SignInResultImplTest.cpp
olp-cpp-sdk-core/: CMakeLists.txt  porting_config.h.in
olp-cpp-sdk-core/cmake/: CompileChecks.cmake  GetAndroidVariables.cmake  android.cmake  curl.cmake  ios.cmake  offline.cmake  pom.xml  winhttp.cmake
olp-cpp-sdk-core/configs/: ConfigNetwork.cmake
olp-cpp-sdk-core/tests/: CMakeLists.txt
olp-cpp-sdk-dataservice-read/: CMakeLists.txt
olp-cpp-sdk-dataservice-read/src/: ApiClientLookup.cpp  ApiClientLookup.h  BlobDataReader.h  BlobDataWriter.h  CatalogClient.cpp  CatalogClientImpl.cpp  CatalogClientImpl.h  Common.h  Condition.h  DownloadItemsJob.h  ExtendedApiResponse.h  ExtendedApiResponseHelpers.h  JsonResultParser.h  MultiRequestContext.h  PendingRequests.cpp  PendingRequests.h  PrefetchHelper.h  PrefetchJob.cpp  PrefetchJob.h  PrefetchPartitionsHelper.cpp  PrefetchPartitionsHelper.h  PrefetchTilesHelper.h  PrefetchTilesProvider.cpp  PrefetchTilesProvider.h  ProtectDependencyResolver.cpp  ProtectDependencyResolver.h  QueryMetadataJob.h  QueryPartitionsJob.h  ReleaseDependencyResolver.cpp  ReleaseDependencyResolver.h  ReleasedCacheKeysForTiles.cpp  ReleasedCacheKeysForTiles.h  RequestBroker.cpp  RequestBroker.h  StreamLayerClient.cpp  StreamLayerClientImpl.cpp  StreamLayerClientImpl.h  TaskContext.h  TaskSink.cpp  TaskSink.h  (+6 more)
olp-cpp-sdk-dataservice-read/test/: CMakeLists.txt
olp-cpp-sdk-dataservice-read/tests/: ApiClientLookupTest.cpp  ApiTest.cpp  AsyncJsonStreamTest.cpp  CMakeLists.txt  CacheMock.h  CatalogCacheRepositoryTest.cpp  CatalogClientCacheTest.cpp  CatalogClientTest.cpp  CatalogClientTestBase.cpp  CatalogClientTestBase.h  CatalogRepositoryTest.cpp  DataCacheRepositoryTest.cpp  DataRepositoryTest.cpp  DecisionApiClientTest.cpp  ExtendedApiResponseTest.cpp  HttpResponses.h  JsonResultParserTest.cpp  MetadataApiTest.cpp  MultiRequestContextTest.cpp  NamedMutexTest.cpp  ParserTest.cpp  PartitionsCacheRepositoryTest.cpp  PartitionsRepositoryTest.cpp  PartitionsSaxHandlerTest.cpp  PendingRequestsTest.cpp  PrefetchRepositoryTest.cpp  QuadTreeIndexTest.cpp  (+11 more)
olp-cpp-sdk-dataservice-write/: CMakeLists.txt
(+1690 files in other folders)
